--- a/Capstone Project/BabyDiary/app/src/main/res/values/strings.xml
+++ b/Capstone Project/BabyDiary/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
         <item>Female</item>
     </string-array>
 
-    <string name="google_maps_key">AIzaSyBCj72ag4wDmG9RLgKY20R8eBW_G6E5MYM</string>
+    <string name="google_maps_key">AIza..</string>
     <string name="select_location_label">Select Location</string>
     <string name="use_this_location">Use this location</string>
     <string name="create_audio_event">Create Audio Event</string>
